# lambda-demo

./: .gitignore  README.md  app.py  cdk.json  generate_lambda_runtime_deps.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: architecture.puml
setup_scripts/: .env  cognito_users_groups_setup.py  get-a-token.txt  get-admin-id-token.sh  get-customers.sh
src/hello_cdk/cdk/: lambda_stack.py
src/hello_cdk/lambda_function/: handler.py
src/lambda_demo/cdk/: api_gateway_stack.py  cognito_stack.py  lambda_stack.py
src/lambda_demo/customers_lambda_function/: handler.py  requirements.txt
src/lambda_demo/orders_lambda_function/: handler.py
src/lambda_demo/products_lambda_function/: handler.py
src/lambda_demo/utils/: logger.py  path_operation_utils.py
tests/customers/: test_customers_handler.py
tests/integration/: test_customer_api.py
tests/orders/: test_orders_handler.py
tests/products/: test_products_handler.py
tests/unit/customers/: test_customers_handler.py
tests/unit/orders/: test_orders_handler.py
tests/unit/products/: test_products_handler.py
