[project]
name = "hello-cdk"
version = "0.1.0"
description = ""
authors = [
    {name = "Casey Sayre",email = "casey-sayre@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aws-cdk-lib (>=2.178.2,<3.0.0)",
    "constructs (>=10.4.2,<11.0.0)"
]

[tool.poetry]
packages = [{include = "hello_cdk", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
